# nitella

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.android  Dockerfile.geoip  Dockerfile.hub  Dockerfile.hubctl  Dockerfile.mock  Dockerfile.nitellad  LICENSE  Makefile  README.md  THREAT_MODEL.md  TODO.md  build_with_docker.sh  geoip_provider.yaml  go.mod  go.sum  tiers.yaml
api/common/: common.proto
api/geoip/: geoip.proto
api/hub/: hub_admin.proto  hub_common.proto  hub_mobile.proto  hub_node.proto
api/local/: nitella_local.proto
api/process/: process.proto
api/proxy/: proxy.proto
app/: pubspec.yaml
app/android/: .gitignore
app/integration_test/: full_e2e_test.dart
app/lib/: main.dart
app/linux/: CMakeLists.txt  libnitella.h
app/test/: main_screen_alerts_test.dart  test_helpers.dart
app/test_driver/: integration_test.dart
app/web/: index.html  manifest.json
cmd/geoip/: commands.go  main.go
cmd/geoip-server/: main.go
cmd/hub/: main.go
cmd/hubctl/: main.go
cmd/mobile_backend/: main.go  main_test.go
cmd/mock/: main.go
cmd/nitella/: hub.go  hub_alerts.go  hub_logs.go  hub_nodes.go  hub_pairing.go  hub_test.go  logging.go  main.go  proxy.go  proxy_test.go
cmd/nitellad/: hub.go  main.go
docs/: APPROVAL_SYSTEM.md  CLI_USER_GUIDE.md  GEOIP.md  HUB.md  INTEGRATION_TESTS.md  MOBILE_USER_GUIDE.md  MOCK.md  PROXY_TEMPLATE.md  REVERSE_PROXY.md
examples/: approval.yaml  simple.yaml
nitellad-rs/: Cargo.toml  build.rs
nitellad-rs/bench/: FINAL_REPORT.md  analyze.py  backend.go  benchmark.sh  full_bench.sh  monitor.sh  monitor_full.sh
nitellad-rs/src/: admin.rs  admin_security.rs  approval.rs  cert_utils.rs  config.rs  cpace.rs  crypto.rs  db.rs  geoip.rs  health.rs  hub.rs  hubca.rs  lib.rs  main.rs  manager.rs  mobile.rs  mobile_service.rs  pairing_offline.rs  process_proxy.rs  proxy.rs  rules.rs  server.rs  stats.rs  synurang.rs
patches/: fix-anet-go124.patch
pkg/cli/: helpers.go  (+4 more)
scripts/: run_full_e2e_test.sh
(+329 files in other folders)
