[package]
name = "nitellad-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nitella"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# gRPC & Protobuf
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# CLI & Config
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Networking & TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
rustls-native-certs = "0.7"
ipnet = "2.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "0.14", features = ["server", "http1", "tcp", "stream"] }
tower = "0.4" # Added for service_fn

# Database (Persistence)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }

# GeoIP
maxminddb = { version = "0.23", features = ["mmap"] }
memmap2 = "0.5"

# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
ed25519-dalek = { version = "2.0", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
curve25519-dalek = "4.1"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
rand = "0.8"
subtle = "2.5"
rcgen = "0.12"
base64 = "0.21"
pem = "3.0"
x509-parser = "0.15"

# WebRTC
webrtc = "0.10"
async-trait = "0.1"

# QR Code
qrcodegen = "1.8"

# Utils
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
regex = "1.10"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
atomic_float = "0.1"
libc = "0.2"
lazy_static = "1.4"
hex = "0.4"
gethostname = "0.4"

[build-dependencies]
tonic-build = "0.11"